# spark-minimal-algorithms

./: .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: main.yml
spark_minimal_algorithms/: __init__.py  algorithm.py
spark_minimal_algorithms/examples/: __init__.py  countifs.py  tera_sort.py
tests/: test_spark_minimal_algorithms.py
tests/examples/: test_countifs.py  test_tera_sort.py
