[tool.poetry]
name = "spark-minimal-algorithms"
version = "0.1.0"
description = "A toolkit for implementing and using Minimal MapReduce Algorithms in Apache Spark."
authors = ["Krzysztof Kowalczyk <k.kowaalczyk@gmail.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.7"
pyspark = "^2.4.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
flake8 = "^3.8.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
